--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
         <section class="text-center col-12">
           <hr />
           <button class="btn btn-outline-secondary btn-xl">
-            <a href="https://ppc99999.github.io/blog/identity-values">
-              Find out more
-            </a>
+            <a href="/blog/identity-values.htmlcod"> Find out more </a>
           </button>
         </section>
       </div>
