--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     />
 
     <!-- Your own stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/styles/blog.css" />
+    <link rel="stylesheet" type="text/css" href="/styles/main.css" />
   </head>
 
   <body>
