--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="text-center col-12">
           <hr />
           <button class="btn btn-outline-secondary btn-xl">
-            <a href="/blog/identity-values.htmlcod"> Find out more </a>
+            <a href="/blog/identity-values.html"> Find out more </a>
           </button>
         </section>
       </div>
